@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Jan-2010 Hannes Papenberg
+# Fixed default parameters in install-SQL for components
+
 05-Jan-2010 Mark Dexter
 # Fix category parameter in content modules (Elin Waring)
 # Fix URL's to remove spaces (Elin Waring)
